header z-index issue fixed. team images reflect on window resize fixed.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -131,7 +131,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 999;
 }
 
 header.invert {
